--- a/src/css/style.css
+++ b/src/css/style.css
@@ -21,17 +21,7 @@
     column-count: 3;
 }
 
-@media (max-width: 1000px) {
-    /* body {
-        background-color: red;
-    } */
-
-    #app-content {
-        grid-template-columns: 1fr;
-    }
-}
-
-@media (max-width: 1200px) {
+@media (max-width: 1100px) {
     /* body {
         background-color: green;
     } */
@@ -41,7 +31,18 @@
     }
 }
 
-@media (max-width: 1000px) {
+@media (max-width: 900px) {
+    /* body {
+        background-color: red;
+    } */
+
+    #app-content {
+        grid-template-columns: 1fr 10fr 1fr;
+    }
+}
+
+
+@media (max-width: 800px) {
 
     span,
     button,
