refactor; improve RNG for word length; add script-name classes to target different language script types

--- a/src/css/style.css
+++ b/src/css/style.css
@@ -226,3 +226,11 @@ a.nonterminal:hover {
 .sentence {
     padding-inline-start: 1rem;
 }
+
+.script-name--roman {
+    font-family: 'Times New Roman', Times, serif;
+}
+
+.script-name--old-italic {
+    font-family: Arial, Helvetica, sans-serif;
+}
