--- a/src/css/style.css
+++ b/src/css/style.css
@@ -102,14 +102,14 @@ details {
     padding-inline-start: 1rem;
 }
 
-.grammar-title {
+summary {
     cursor: pointer;
     padding-block: 0.5rem;
     font-size: larger;
     font-weight: bold;
 }
 
-.grammar-title:hover {
+summary:hover {
     text-decoration: underline;
 }
 
@@ -233,4 +233,28 @@ a.nonterminal:hover {
 
 .script-name--old-italic {
     font-family: Arial, Helvetica, sans-serif;
+}
+
+section {
+    margin-block-start: 1rem;
+}
+
+.wordgen-lang {
+    border: 1px solid goldenrod;
+    border-radius: 2px;
+    padding: 1rem;
+    columns: 3;
+}
+
+.wordgen-lang li {
+    list-style-position: inside;
+}
+
+.sample-syllable {
+    padding-inline: 0.25rem;
+}
+
+.sample-syllable::before,
+.sample-syllable::after {
+    content: "/";
 }
