--- a/src/css/style.css
+++ b/src/css/style.css
@@ -78,8 +78,9 @@ footer {
 }
 
 button {
-    padding-block: 0.25rem;
+    padding-block: 0.5rem;
     padding-inline: 0.75rem;
+    margin: 0.25rem;
     border-radius: 5px;
     font-weight: bold;
 
@@ -251,6 +252,7 @@ section {
 }
 
 .sample-syllable {
+    font-family: Georgia, 'Times New Roman', Times, serif;
     padding-inline: 0.5rem;
     font-size: 2em;
 }
