get orthography working for generated syllables

--- a/src/css/style.css
+++ b/src/css/style.css
@@ -254,11 +254,11 @@ section {
 .sample-syllable {
     font-family: Georgia, 'Times New Roman', Times, serif;
     padding-inline: 0.5rem;
-    font-size: 2em;
+    /* font-size: 2em; */
 }
 
 .sample-word {
     font-family: Georgia, 'Times New Roman', Times, serif;
     padding-inline: 0.5rem;
-    font-size: 2em;
+    /* font-size: 2em; */
 }
