add word counts

--- a/src/css/style.css
+++ b/src/css/style.css
@@ -198,7 +198,7 @@ a.nonterminal:hover {
     content: "."
 }
 
-.sentence :first-child {
+.sentence .word-and-subscript:first-child {
     text-transform: capitalize;
 }
 
@@ -311,4 +311,11 @@ section {
     color: rgb(244, 244, 84);
     text-shadow: 1px 1px 10px white;
     text-decoration: underline;
+}
+
+.word-count {
+    font-size: x-small;
+    color: rgba(255, 255, 255, 0.75);
+    /* we'll desiplay as subscript: */
+    vertical-align: sub;
 }
