--- a/src/css/style.css
+++ b/src/css/style.css
@@ -411,6 +411,7 @@ td {
     padding: 0.2rem;
     text-align: center;
     width: 100%;
+    height: 100%;
     margin: 0;
     border-radius: 0;
     border: none;
