--- a/src/css/style.css
+++ b/src/css/style.css
@@ -363,6 +363,10 @@ section {
         max-height: 40vh;
         overflow-y: auto;
     }
+
+    #user-translations th {
+        font-size: smaller;
+    }
 }
 
 @media (width <=800px) {
@@ -370,7 +374,7 @@ section {
         bottom: 0;
         right: 0;
         left: 0;
-        border-radius: 1rem;
+        border-radius: 1rem 1rem 0 0;
         max-height: 30vh;
         overflow-y: auto;
         border-top: 2px solid goldenrod;
@@ -378,6 +382,10 @@ section {
 
     #user-translations table {
         margin-inline: 3rem;
+    }
+
+    #user-translations th {
+        font-size: small;
     }
 }
 
@@ -395,7 +403,6 @@ td {
 }
 
 #user-translations th {
-    font-size: smaller;
     border-bottom: 4px double goldenrod;
 }
 
