better word deselection, dashed underline for selected word

--- a/src/css/style.css
+++ b/src/css/style.css
@@ -310,7 +310,7 @@ section {
     transition: ease 150ms;
     color: rgb(244, 145, 249);
     text-decoration: underline;
-    /* text-decoration-style: dotted; */
+    text-decoration-style: dashed;
     animation: blink 750ms infinite;
 }
 
