--- a/src/css/style.css
+++ b/src/css/style.css
@@ -404,6 +404,73 @@ rt {
     position: absolute;
 }
 
+#wrap-user-translations-toggle {
+    position: absolute;
+}
+
+
+#user-translations-toggle-label {
+    position: fixed;
+    width: min-content;
+    background-color: goldenrod;
+
+    padding: 0.5rem;
+    display: block;
+
+
+
+    @media (width > 800px) {
+        & {
+            right: 0;
+            bottom: 0;
+            transform: translateX(0%) translateY(100%);
+            border-radius: 0% 0% 50% 50%;
+        }
+    }
+
+    @media (width <=800px) {
+        & {
+            right: 0;
+            top: 0;
+            transform: translateX(0%) translateY(-100%);
+            border-radius: 50%;
+            /* border-radius: 50% 50% 0% 0%; */
+            /* padding-block-end: 1rem; */
+        }
+    }
+
+    &:hover {
+        background-color: color-mix(in oklab, goldenrod, white);
+        outline: 2px solid white;
+    }
+
+
+    &::before {
+        content: "📘";
+        font-size: x-large;
+        padding: 0.25rem;
+    }
+}
+
+#user-translations-toggle {
+    appearance: none;
+}
+
+#user-translations:has(#user-translations-toggle:checked) {
+
+    & {
+        transform: translateY(0);
+    }
+
+    & #user-translations-toggle-label {
+
+        &::before {
+            content: "📖";
+            padding: 0.1rem;
+        }
+    }
+}
+
 #user-translations {
     position: fixed;
 
@@ -414,87 +481,93 @@ rt {
     justify-content: center;
 
     backdrop-filter: blur(8px);
-}
 
-@media (width > 800px) {
-    #user-translations {
-        top: 0;
-        right: 0;
-        border-radius: 0 0 0 0.25rem;
-        border-bottom: 2px solid goldenrod;
-        border-left: 2px solid goldenrod;
-        max-height: 40vh;
+    transition: transform ease-out 150ms;
+
+
+    @media (width > 800px) {
+        & {
+            top: 0;
+            right: 0;
+            border-radius: 0 0 0 0.25rem;
+            border-bottom: 2px solid goldenrod;
+            border-left: 2px solid goldenrod;
+            max-height: 40dvh;
+
+            transform: translateY(-100%);
+        }
+
+        & th {
+            font-size: smaller;
+        }
+    }
+
+    @media (width <=800px) {
+        & {
+            bottom: 0;
+            right: 0;
+            left: 0;
+            border-radius: 1rem 1rem 0 0;
+            max-height: 30dvh;
+            border-top: 2px solid goldenrod;
+
+            transform: translateY(100%);
+        }
+
+        & table {
+            margin-inline: 3rem;
+        }
+
+        & th {
+            font-size: small;
+        }
+    }
+
+    & table {
+        width: 100%;
+        border-collapse: collapse;
         overflow-y: auto;
     }
 
-    #user-translations th {
-        font-size: smaller;
-    }
-}
-
-@media (width <=800px) {
-    #user-translations {
-        bottom: 0;
-        right: 0;
-        left: 0;
-        border-radius: 1rem 1rem 0 0;
-        max-height: 30vh;
-        overflow-y: auto;
-        border-top: 2px solid goldenrod;
+    /* continue formatting for table */
+    & th,
+    td {
+        border: 1px solid goldenrod;
+        padding: 0.2rem;
+        text-align: center;
     }
 
-    #user-translations table {
-        margin-inline: 3rem;
+    & th {
+        border-bottom: 4px double goldenrod;
     }
 
-    #user-translations th {
-        font-size: small;
+    & tr:nth-child(even) {
+        background-color: rgba(0, 0, 0, 0.2);
     }
-}
 
-#user-translations table {
-    width: 100%;
-    border-collapse: collapse;
-}
+    & td:has(button) {
+        padding: 0;
+    }
 
-/* continue formatting for table */
-#user-translations th,
-td {
-    border: 1px solid goldenrod;
-    padding: 0.2rem;
-    text-align: center;
-}
+    & button {
+        padding: 0.2rem;
+        text-align: center;
+        width: 100%;
+        height: 100%;
+        margin: 0;
+        border-radius: 0;
+        border: none;
+        background-color: transparent;
+        color: goldenrod;
+    }
 
-#user-translations th {
-    border-bottom: 4px double goldenrod;
-}
+    & button:hover {
+        background-color: goldenrod;
+        color: black;
+    }
 
-#user-translations tr:nth-child(even) {
-    background-color: rgba(0, 0, 0, 0.2);
-}
-
-#user-translations td:has(button) {
-    padding: 0;
-}
-
-#user-translations button {
-    padding: 0.2rem;
-    text-align: center;
-    width: 100%;
-    height: 100%;
-    margin: 0;
-    border-radius: 0;
-    border: none;
-    background-color: transparent;
-    color: goldenrod;
-}
-
-#user-translations button:hover {
-    background-color: goldenrod;
-    color: black;
-}
-
-#user-translations button:active {
-    background-color: white;
-    color: goldenrod;
+    & button:active {
+        background-color: white;
+        color: goldenrod;
+    }
 }
