make user-translation table a sidebar for all screen sizes

--- a/src/css/style.css
+++ b/src/css/style.css
@@ -417,10 +417,13 @@ rt {
     padding: 0.5rem;
     display: block;
 
-    right: 0;
-    bottom: 0;
-    transform: translateX(0%) translateY(100%);
-    border-radius: 0% 0% 50% 50%;
+    left: 0;
+    top: 0;
+    transform: translateX(-100%);
+    border-radius: 50% 0 0 50%;
+
+    transition: background-color 100ms ease,
+        outline 100ms ease;
 
     &:hover {
         background-color: color-mix(in oklab, goldenrod, white);
@@ -440,10 +443,7 @@ rt {
 }
 
 #user-translations:has(#user-translations-toggle:checked) {
-
-    & {
-        transform: translateY(0);
-    }
+    transform: translateX(0);
 
     & #user-translations-toggle-label {
 
@@ -464,7 +464,7 @@ rt {
 
     backdrop-filter: blur(8px);
 
-    transition: transform ease-out 150ms;
+    transition: transform ease 150ms;
 
 
     top: 0;
@@ -474,7 +474,7 @@ rt {
     border-left: 2px solid goldenrod;
     height: 100dvh;
 
-    transform: translateY(-100%);
+    transform: translateX(100%);
 
     & #user-translations-table-wrap {
         overflow-y: scroll;
