--- a/src/css/style.css
+++ b/src/css/style.css
@@ -456,25 +456,22 @@ rt {
 
 #user-translations {
     position: fixed;
+    top: 0;
+    right: 0;
+    transform: translateX(100%);
+    transition: transform ease 150ms;
+    height: 100dvh;
 
     background-color: rgba(46, 49, 75, 0.8);
+    backdrop-filter: blur(8px);
+
+    border-left: 3px solid goldenrod;
 
     display: flex;
     justify-content: center;
 
-    backdrop-filter: blur(8px);
-
-    transition: transform ease 150ms;
 
 
-    top: 0;
-    right: 0;
-    border-radius: 0 0 0 0.25rem;
-    border-bottom: 2px solid goldenrod;
-    border-left: 2px solid goldenrod;
-    height: 100dvh;
-
-    transform: translateX(100%);
 
     & #user-translations-table-wrap {
         overflow-y: scroll;
@@ -500,7 +497,7 @@ rt {
     }
 
     & tr:nth-child(even) {
-        background-color: rgba(0, 0, 0, 0.2);
+        background-color: rgba(0, 0, 0, 0.3);
     }
 
     & td:has(button) {
@@ -508,7 +505,7 @@ rt {
     }
 
     & button {
-        padding: 0.2rem;
+        padding: 0.5rem;
         text-align: center;
         width: 100%;
         height: 100%;
@@ -516,7 +513,8 @@ rt {
         border-radius: 0;
         border: none;
         background-color: transparent;
-        color: goldenrod;
+        color: white;
+        font-family: sans-serif;
     }
 
     & button:hover {
