--- a/src/css/style.css
+++ b/src/css/style.css
@@ -417,25 +417,12 @@ rt {
 }
 
 #answer-checking-toggle {
-    position: fixed;
-    top: 0;
-    left: 0;
-
-    border-radius: 0 50% 50% 0;
-    border: none;
-
-    width: min-content;
-    margin: 0;
-    padding: 0.65rem;
-
-    font-family: serif;
-    font-size: larger;
-
-    background-color: rgba(90, 97, 196, 0.623);
+    background-color: rgba(90, 97, 196);
+    translate: 0 110%;
 
     &.answer-checking-on {
         background-color: goldenrod;
-        outline: 3px dashed rgb(143, 110, 0);
+        outline: 2px dashed rgb(143, 110, 0);
     }
 
     &:hover {
@@ -452,26 +439,36 @@ rt {
     }
 }
 
-#wrap-user-translations-toggle {
+#wrap-side-btns {
     position: absolute;
 }
 
-
-#user-translations-toggle-label {
+.side-panel-btn {
     position: fixed;
-    width: min-content;
-    background-color: goldenrod;
-
-    padding: 0.5rem;
     display: block;
-
     left: 0;
     top: 0;
     transform: translateX(-100%);
+
+    width: min-content;
+    padding: 0.5rem;
+    margin: 0;
+
+    border: 2px solid rgb(100% 100% 100% / 0.5);
     border-radius: 50% 0 0 50%;
 
-    transition: background-color 100ms ease,
+    font-family: serif;
+    font-size: x-large;
+
+    transition:
+        background-color 100ms ease,
         outline 100ms ease;
+}
+
+#side-panel-toggle-label {
+    background-color: goldenrod;
+
+
 
     &:hover {
         background-color: color-mix(in oklab, goldenrod, white);
@@ -481,19 +478,17 @@ rt {
 
     &::before {
         content: "📘";
-        font-size: x-large;
-        padding: 0.25rem;
     }
 }
 
-#user-translations-toggle {
+#side-panel-toggle {
     appearance: none;
 }
 
-#user-translations:has(#user-translations-toggle:checked) {
+#side-panel:has(#side-panel-toggle:checked) {
     transform: translateX(0);
 
-    & #user-translations-toggle-label {
+    & #side-panel-toggle-label {
 
         &::before {
             content: "📖";
@@ -502,15 +497,16 @@ rt {
     }
 }
 
-#user-translations {
+#side-panel {
     position: fixed;
     top: 0;
     right: 0;
     transform: translateX(100%);
     transition: transform ease 150ms;
     height: 100dvh;
+    max-width: 80svw;
 
-    background-color: rgba(46, 49, 75, 0.8);
+    background-color: rgba(188, 194, 252, 0.1);
     backdrop-filter: blur(8px);
 
     border-left: 3px solid goldenrod;
@@ -518,7 +514,7 @@ rt {
     display: flex;
     justify-content: center;
 
-
+    box-shadow: -10px 0px 20px 0px rgb(69, 71, 117);
 
 
     & #user-translations-table-wrap {
@@ -552,8 +548,8 @@ rt {
         padding: 0;
     }
 
-    & button {
-        padding: 0.5rem;
+    & table button {
+        padding: 0.75rem;
         text-align: center;
         width: 100%;
         height: 100%;
@@ -565,13 +561,11 @@ rt {
         font-family: sans-serif;
     }
 
-    & button:hover {
-        background-color: goldenrod;
-        color: black;
+    & table button:hover {
+        background-color: rgba(100% 100% 100% / 0.9);
     }
 
-    & button:active {
+    & table button:active {
         background-color: white;
-        color: goldenrod;
     }
 }
